TargetCardTest start implementation, TargetCard CheckGoal rewrite for ObliqueTargetCard.class and PositionGoalTarget.class.